--- a/src/App.css
+++ b/src/App.css
@@ -54,3 +54,48 @@
     display: block;
     text-align: center;
 }
+#singleTask{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    padding: 20px;
+    gap:10px;
+    border: 1px solid #9C27B0;
+    margin: 10px auto;
+    border-radius: 10px;
+    width: 50%;
+    padding: 20px;
+    background-color: #9C27B0;
+}
+#singleTask_define{
+    display:flex;
+    gap: 10px ;
+    align-items: center;
+}
+#singleTask_text{
+    font-family: 'Poppins', sans-serif;
+    font-size: 15px;
+    text-transform: uppercase;
+    color: white;
+}
+#singleTask__delete{
+    border: none;
+    padding: 8px;
+    outline: none;
+    border-radius: 5px;
+    width: 90px;
+    background-color: white;
+    cursor: pointer;
+}
+#singleTask_icon{
+    font-size: 20px;
+    color: white;
+}
+
+
+@media screen and (max-width: 768px){
+    #singleTask{
+        width: auto;    
+    }
+}
+    
